tests/errors/redefine-external.futil
import "primitives/core.futil";

extern "fake.sv" {
  primitive exp() -> ();
}

component exp() -> () {
  cells {}
  wires {}
  control {}
}

component main() -> () {
  cells {}
  wires {}
  control {}
}
